# soakit

./: Cargo.toml  README.md
docs/: api.md  architecture.md  examples.md  roadmap.md  usage.md
src/: bulk.rs  error.rs  lib.rs  meta.rs  proxy.rs  util.rs  value.rs  view.rs
tests/: aosoa_test.rs  derived_fields_test.rs  edge_cases_test.rs  error_handling_test.rs  integration_test.rs  record_serialization_test.rs  serialization_test.rs
tests/common/: mod.rs
